[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Character.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Shop.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ShopMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Skull_soulpack.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Ghost_soulpack.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 11 )

[sub_resource type="CircleShape2D" id=8]
radius = 16.0

[node name="Shop" type="StaticBody2D"]
position = Vector2( 16, 13 )
script = ExtResource( 3 )

[node name="Seller_Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 5 )
frames = SubResource( 6 )

[node name="Shop_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 13 )
shape = SubResource( 8 )

[node name="Ghost_soulpack" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 20, 12 )

[node name="Skull_soulpack" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 20, 11 )

[node name="ShopMenu" parent="." instance=ExtResource( 4 )]
position = Vector2( -40, -52 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
